@@ -213,6 +213,11 @@ set(ORTHANC_UNIT_TESTS_SOURCES
   )
 
 
+set(SERVE_FOLDERS_SOURCES
+  Plugins/Samples/ServeFolders/Plugin.cpp
+  )
+
+
 set(ORTHANC_EMBEDDED_FILES
   PREPARE_DATABASE            ${CMAKE_CURRENT_SOURCE_DIR}/OrthancServer/PrepareDatabase.sql
   UPGRADE_DATABASE_3_TO_4     ${CMAKE_CURRENT_SOURCE_DIR}/OrthancServer/Upgrade3To4.sql
@@ -293,6 +298,35 @@ else()
     )
 endif()
 
+if(${CMAKE_SYSTEM_NAME} STREQUAL "Windows")
+  execute_process(
+    COMMAND 
+    ${PYTHON_EXECUTABLE} ${ORTHANC_ROOT}/Resources/WindowsResources.py
+    ${ORTHANC_VERSION} Orthanc Orthanc.exe "Lightweight, RESTful DICOM server for medical imaging"
+    ERROR_VARIABLE Failure
+    OUTPUT_FILE ${AUTOGENERATED_DIR}/Orthanc.rc
+    )
+
+  if (Failure)
+    message(FATAL_ERROR "Error while computing the version information: ${Failure}")
+  endif()
+
+  execute_process(
+    COMMAND 
+    ${PYTHON_EXECUTABLE} ${ORTHANC_ROOT}/Resources/WindowsResources.py
+    ${ORTHANC_VERSION} ServeFolders ServeFolders.dll "Orthanc plugin to serve additional folders"
+    ERROR_VARIABLE Failure
+    OUTPUT_FILE ${AUTOGENERATED_DIR}/ServeFolders.rc
+    )
+
+  if (Failure)
+    message(FATAL_ERROR "Error while computing the version information: ${Failure}")
+  endif()
+
+  list(APPEND ORTHANC_RESOURCES ${AUTOGENERATED_DIR}/Orthanc.rc)
+  list(APPEND SERVE_FOLDERS_SOURCES ${AUTOGENERATED_DIR}/ServeFolders.rc)
+endif()
+
 
 
 #####################################################################
@@ -359,6 +393,7 @@ add_dependencies(ServerLibrary CoreLibrary)
 
 add_executable(Orthanc
   OrthancServer/main.cpp
+  ${ORTHANC_RESOURCES}
   )
 
 target_link_libraries(Orthanc ServerLibrary CoreLibrary ${STATIC_LUA} ${STATIC_GOOGLE_LOG} ${DCMTK_LIBRARIES})
@@ -408,7 +443,7 @@ include_directories(${CMAKE_SOURCE_DIR}/Plugins/Include)
 
 add_library(
   ServeFolders SHARED 
-  Plugins/Samples/ServeFolders/Plugin.cpp
+  ${SERVE_FOLDERS_SOURCES}
   ${JSONCPP_SOURCES}
   )
 
